# for-danny

./: .gitignore
a/: Cargo.toml
a/src/: bindings.rs  lib.rs
b/: Cargo.toml
b/src/: bindings.rs  lib.rs
wit/: package.wit  wit.toml
