[package]
name = "a"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:a"
# target = "demo:bar/a"

[package.metadata.component.target]
path = "../wit"
world = "a"

[package.metadata.component.dependencies]
